--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,21 @@
 <body>
     <h1>Programa de Colas</h1>
 
+    <script src="socket.io/socket.io.js"></script>
+
+    <script>
+        var socket = io();
+
+        socket.on('connect', function(){
+            console.log('conectado al servidr')
+        });
+
+
+        socket.on('disconnect', function (){
+            console.log('conexion perdida con el servidor')
+        })
+    </script>
+
 </body>
 
 </html>
