--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,7 @@
 
     <script src="socket.io/socket.io.js"></script>
 
-    <script>
-        var socket = io();
-
-        socket.on('connect', function(){
-            console.log('conectado al servidr')
-        });
-
-
-        socket.on('disconnect', function (){
-            console.log('conexion perdida con el servidor')
-        })
-    </script>
+    <script src="js/socket-cliente.js"></script>
 
 </body>
 
